# tenet-openclaw-arena

./: .gitignore  README.md  pyproject.toml  run_6task_v2.py  run_arena_6task.sh  run_arena_m27.sh  run_bench.sh  run_bench_single.sh  wrangler.toml
.github/workflows/: ci.yml
app/: fix_css.py  fix_css2.py  index.html  package-lock.json  package.json
app/public/: site-data.json
app/src/: App.test.ts  App.vue  types.ts
app/src/api/: client.ts
app/src/components/: PretextStageCanvas.vue
app/src/data/: loadSiteData.test.ts  loadSiteData.ts
app/src/presentation/: createArenaStory.test.ts  createArenaStory.ts
app/src/stage/: renderPretextStage.ts
app/src/styles/: theme.css  (+1 more)
backend/: package-lock.json  package.json
backend/src/: index.ts  types.ts
benchmark/: __init__.py  event_parser.py  openclaw_runner.py  parallel_runner.py  schemas.py  scorer.py  scoring.py  site_payload.py  task_loader.py  transcript_collector.py
data/tasks/: benchmark_tasks.json
docs/: CFD_PAGES_DEPLOY.md  FEISHU_SYNC.md  INTRO.md  PLAN.md  PROGRESS_SUMMARY.md  TASK_LIST.md
docs/TASK_CARDS/: TASK_arena_task_lib_and_test_v2.md  TASK_phase1_project_scaffold.md  TASK_phase4_publish_path_and_repo_ownership.md
scripts/: __init__.py  build_site_data.py  fix_scoring_rules.py  reset_run.py  run_benchmark.py  score_runs.py  setup_agents.py  sync_tasks.py  sync_yaml_tasks_to_db.py
tests/: test_api_routes.py  test_openclaw_runner.py  test_run_benchmark.py  test_score_runs.py  test_scoring.py  test_setup_agents.py  test_site_payload.py  test_task_loader.py  test_transcript_collector.py
(+100 files in other folders)
