[project]
name = "openclaw-model-arena"
version = "0.1.0"
description = "Real benchmark harness and evidence site for OpenClaw model evaluation"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = [".", "Projects/openclaw-model-arena"]
testpaths = ["Projects/openclaw-model-arena/tests"]
